prqlc/prql-compiler/tests/integration/snapshots/integration__results@group_all.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from a=albums\ntake 10\njoin tracks (==album_id)\ngroup [a.album_id, a.title] (aggregate price = ((sum tracks.unit_price)))\nsort album_id\n"
input_file: prql-compiler/tests/integration/queries/group_all.prql
---
1,For Those About To Rock We Salute You,9.9
2,Balls to the Wall,0.99
3,Restless and Wild,2.9699999999999998
4,Let There Be Rock,7.920000000000001
5,Big Ones,14.850000000000001
6,Jagged Little Pill,12.870000000000001
7,Facelift,11.88
8,Warner 25 Anos,13.860000000000001
9,Plays Metallica By Four Cellos,7.920000000000001
10,Audioslave,13.860000000000001

